--- a/threeJS_basicApp.html
+++ b/threeJS_basicApp.html
@@ -31,10 +31,11 @@
 
         <!-- scripts de biblioteca -->
         <script type="importmap">
-            {"imports": {"three": ".lib/three.module.js"}}
+            {"imports": {"three": "./lib/three.module.js"}}
         </script>
 
         <!-- mi script -->
         <script type="module" src="js/EscenaBasica.js"></script>
     
-</body></html>
+    </body>
+</html>
