--- a/threeJS.html
+++ b/threeJS.html
@@ -35,7 +35,7 @@
         </script>
 
         <!-- mi script -->
-        <script type="module" src="js/EscenaBasica.js"></script>
+        <script type="module" src="js/Escena.js"></script>
     
     </body>
 </html>
