--- a/practica2.html
+++ b/practica2.html
@@ -25,7 +25,7 @@
     <body>
         <div id="container"></div>
         <div id="info">
-            <h2>Threejs basic example</h2>
+            <h2>Practica 2</h2>
         </div>
 
         <!-- Declaracion del espacio de nombres de Threejs -->
